Corrigindo bugs no login psicologo.